<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_manage"
        android:icon="@mipmap/ic_list"
        android:title="@string/manage"
        app:showAsAction="always" />
    <item android:title="@string/file">
        <menu>
            <item
                android:id="@+id/action_new"
                android:title="@string/create" />
            <item
                android:id="@+id/action_open"
                android:title="@string/open" />
            <item
                android:id="@+id/action_save"
                android:title="@string/save" />
            <item
                android:id="@+id/action_details"
                android:title="@string/details" />
        </menu>
    </item>
    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/action_extensions"
                android:title="@string/extensions" />
            <item
                android:id="@+id/action_convert"
                android:title="@string/convert" />
            <item
                android:id="@+id/action_crawler"
                android:title="@string/crawler" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit" />
</menu>
